--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.00",
+    "@types/jest": "^26.0.20",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.0",
-    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "chai": "^4.2.0",
@@ -76,9 +76,10 @@
     "lint-staged": ">=10",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
+    "readline-sync": "^1.4.10",
     "solidity-coverage": "^0.7.0",
-    "ts-jest": "^26.5.1",
     "ts-generator": "^0.1.0",
+    "ts-jest": "^26.5.1",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
     "typescript": "^4.1.5"
@@ -88,6 +89,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
+    "@shoyunft/contracts": "^1.0.2",
     "@sushiswap/core": "^1.4.2",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.7"
